--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,5 @@ spring:
     url: jdbc:mysql://localhost:3306/resource?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=UTC
     username: root
     password: qq123456
+  mvc:
+    static-path-pattern: /static/**
